--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cardle-app",
   "version": "0.1.0",
-  "private": true,
+  "description": "wordle but with cars, built with Node.js, Express, and MySQL",
+  "main": "server.js",
   "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -12,7 +13,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "inquirer": "^8.2.4",
-    "mysql": "^2.8.1"
+    "mysql": "^2.18.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
